--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "fastify": "^3.27.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "rollup": "^2.69.0",
