serve-express.js 수정

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "front_build": "rollup -c",
     "front_start": "sirv client --no-clear",
-    "start" : "node ./server/server-express.js",
-    "dev" : "node ./server/server-express.js"
+    "start": "node ./server/server-express.js",
+    "dev": "node ./server/server-express.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "fastify": "^3.27.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
